<resources>
    <string name="app_name">KeyBoardSamples</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_birthday">Enter Date Of Birth</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="create_account" >Create Account</string>
    <string name="company_logo">Company logo</string>

    <string-array name="spinner_label">
       <item>Home</item>
       <item>Work</item>
       <item>Mobile</item>
       <item>Other</item>
   </string-array>
</resources>
