<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/galaxy"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="188dp"
        android:layout_height="195dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/logo_blue" />
    <TextView
        android:id="@+id/sign_up"

        android:layout_below="@+id/company_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Sign Up"
        android:textColor="@android:color/white"
        android:textSize="24sp"

        android:textStyle="bold"
        android:layout_marginBottom="15sp"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:drawableStart="@drawable/ic_account_circle_white"
        android:hint="@string/enter_first_name"
        android:inputType="textCapSentences"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:drawableLeft="@drawable/ic_account_circle_white" />
    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_surname"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textCapSentences"
        android:drawableStart="@drawable/ic_account_circle_white"
        android:drawableLeft="@drawable/ic_account_circle_white"
        android:layout_alignParentRight="true" />
    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:hint="@string/enter_email"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_white"
        android:drawableLeft="@drawable/ic_email_white" />
        <EditText
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@android:color/white"
            android:layout_below="@id/email_address"
            android:hint="@string/enter_birthday"
            android:textColorHint="@android:color/white"
            android:inputType="date"
            android:drawableStart="@drawable/ic_date_range_white"
            android:drawableLeft="@drawable/ic_date_range_white" />
            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_below="@+id/birthday"
                android:hint="@string/enter_phone"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="phone"
                android:drawableStart="@drawable/ic_local_phone_white"
                android:drawableLeft="@drawable/ic_local_phone_white" />

            <Spinner
                android:id="@+id/phone_spinner"
                android:hint="@array/spinner_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_below="@+id/birthday"
                android:layout_toEndOf="@+id/phone"

                android:backgroundTint="@android:color/white"
                android:layout_toRightOf="@+id/phone" />
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_below="@id/phone"
        android:ems="8"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_security_white"

        android:drawableLeft="@drawable/ic_security_white" />
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/phone"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_security_white"

        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/ic_security_white" />
    <CheckBox
        android:id="@+id/conditions"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/accept_terms_and_conditions"
        android:checked="true"

        android:textColor="#DAFFFA"
        android:onClick="showToast"
        android:layout_centerHorizontal="true"
       />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/conditions"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="50dp"
        android:onClick="createAccount"

        />


</RelativeLayout>